Build multi-arch images to also have arm available (#4)
* test for arm images

* Update .github/workflows/image-creator.yml

Co-authored-by: Juan Miguel Carceller <22276694+jmcarcell@users.noreply.github.com>

* rework to use build and push action

* fix path

* fix image names

* pick up image from 1st step

* switching to a template

* moving registry in

* fix inputs

* fix registry

* fix capitalisation

* image type

* context?

* hardcode registry

* undo

* spec registry

* multiplatform

* multiplatform

* pick runner

* rematrix

* cleanup image name

* revert to platforms

* revert back :D

* I can't figure out the matrix

* fix context

* final fix?

* get version from meta step

* meta also for amd64

* split

* type for arm

* alma9 fix

* picking tags

* removing latest

* specify branch

* try multi-arch without ubuntu22

* try multi-arch without ubuntu22

* test for arm images

* Update .github/workflows/image-creator.yml

Co-authored-by: Juan Miguel Carceller <22276694+jmcarcell@users.noreply.github.com>

* rework to use build and push action

* fix path

* fix image names

* pick up image from 1st step

* switching to a template

* moving registry in

* fix inputs

* fix registry

* fix capitalisation

* image type

* context?

* hardcode registry

* undo

* spec registry

* multiplatform

* multiplatform

* pick runner

* rematrix

* cleanup image name

* revert to platforms

* revert back :D

* I can't figure out the matrix

* fix context

* final fix?

* get version from meta step

* meta also for amd64

* split

* type for arm

* alma9 fix

* picking tags

* removing latest

* specify branch

* try multi-arch without ubuntu22

* try multi-arch without ubuntu22

* Update the mount scripts

* Update Ubuntu24

* Try

* Try

* removed unused scripts

* removed type as we build multi-arch images

* Update Docker/alma9/alma9-cvmfs/Dockerfile

Co-authored-by: Thomas Madlener <thomas.madlener@desy.de>

* Update Docker/ubuntu22/ubuntu22-cvmfs/Dockerfile

--- a/Docker/ubuntu22/ubuntu22-cvmfs/Dockerfile
+++ b/Docker/ubuntu22/ubuntu22-cvmfs/Dockerfile
@@ -1,4 +1,7 @@
-FROM ubuntu22
+ARG REGISTRY=ghcr.io
+ARG REPOSITORY=key4hep/key4hep-images
+ARG BRANCH=main
+FROM ${REGISTRY}/${REPOSITORY}/ubuntu22:latest
 
 RUN apt update && \
     apt install -y lsb-release && \
