--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -8,42 +8,85 @@ name: Create images
 
 on:
   push:
+    branches:
+      - main
   workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  REGISTRY: ghcr.io
+
 jobs:
   # Image for running key4hep
   build:
     strategy:
+      fail-fast: true
       matrix:
         image: ["alma9", "ubuntu22", "ubuntu24"]
-      fail-fast: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: build
-        run: |
-          echo $PWD
-          ls -l
-          cd Docker/${{ matrix.image }}
-          ./build.sh
-      - name: tag
-        run: |
-          docker tag ${{ matrix.image }} ghcr.io/key4hep/key4hep-images/${{ matrix.image }}:latest
-          docker tag ${{ matrix.image }}-cvmfs ghcr.io/key4hep/key4hep-images/${{ matrix.image }}-cvmfs:latest
-      - name: show
-        run: docker images
-      - name: login and push
-        env:
-          deploy_secret: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          if [ ! -z ${deploy_secret} ]; then
-            echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io --username ${{ github.actor }} --password-stdin;
-            docker push ghcr.io/key4hep/key4hep-images/${{ matrix.image }}:latest;
-            docker push ghcr.io/key4hep/key4hep-images/${{ matrix.image }}-cvmfs:latest;
-          else
-            echo "Skipping deploy no secrets present";
-          fi
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Docker Meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}
+      - name: Build and Push
+        id: docker_build
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          platforms: linux/amd64, linux/arm64
+          context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build
+          file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build/Dockerfile
+          #tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}:${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
+          tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}:latest
+          labels: ${{ steps.meta.outputs.labels }}
+  build-cvmfs:
+    needs: build
+    strategy:
+      fail-fast: false
+      matrix:
+        image: ["alma9", "ubuntu22", "ubuntu24"]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Docker Meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}
+      - name: Build and Push
+        id: docker_build
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          platforms: linux/amd64, linux/arm64
+          context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs
+          file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs/Dockerfile
+          build-args: |
+            REGISTRY=${{ env.REGISTRY }}
+            REPOSITORY=${{ github.repository }}
+            BRANCH=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
+          #tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-cvmfs:${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
+          tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-cvmfs:latest
+          labels: ${{ steps.meta.outputs.labels }}
