--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -16,77 +16,25 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-env:
-  REGISTRY: ghcr.io
-
 jobs:
-  # Image for running key4hep
   build:
-    strategy:
-      fail-fast: true
-      matrix:
-        image: ["alma9", "ubuntu22", "ubuntu24"]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Docker Meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}
-      - name: Build and Push
-        id: docker_build
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          platforms: linux/amd64, linux/arm64
-          context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build
-          file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build/Dockerfile
-          #tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}:${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
-          tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}:latest
-          labels: ${{ steps.meta.outputs.labels }}
-  build-cvmfs:
-    needs: build
+    uses: ./.github/workflows/image-template.yaml
     strategy:
       fail-fast: false
       matrix:
         image: ["alma9", "ubuntu22", "ubuntu24"]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Docker Meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}
-      - name: Build and Push
-        id: docker_build
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          platforms: linux/amd64, linux/arm64
-          context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs
-          file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs/Dockerfile
-          build-args: |
-            REGISTRY=${{ env.REGISTRY }}
-            REPOSITORY=${{ github.repository }}
-            BRANCH=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
-          #tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-cvmfs:${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
-          tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-cvmfs:latest
-          labels: ${{ steps.meta.outputs.labels }}
+    with:
+      image: ${{ matrix.image }}
+      registry: ghcr.io
+      image-type: build
+  build-cvmfs:
+    needs: build
+    uses: ./.github/workflows/image-template.yaml
+    strategy:
+      fail-fast: false
+      matrix:
+        image: ["alma9", "ubuntu22", "ubuntu24"]
+    with:
+      image: ${{ matrix.image }}
+      registry: ghcr.io
+      image-type: cvmfs
