--- a/.github/workflows/docker-build-push-template.yaml
+++ b/.github/workflows/docker-build-push-template.yaml
@@ -38,7 +38,7 @@ jobs:
   build-and-push:
     runs-on: ${{ inputs.runner }}
     outputs:
-      image-uri: ${{ inputs.image-name }}:${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}@${{ steps.build.outputs.digest }}
+      image-uri: ${{ inputs.image-name }}:${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}@${{ steps.docker_build.outputs.digest }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
