--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -65,6 +65,43 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      - name: Docker Meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}
+      - name: Build and Push
+        id: docker_build
+        uses: docker/build-push-action@v6
+        with:
+          push: false
+          load: true
+          platforms: linux/amd64
+          context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs
+          file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs/Dockerfile
+          build-args: |
+            REGISTRY=${{ env.REGISTRY }}
+            REPOSITORY=${{ github.repository }}
+            BRANCH=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
+          tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-cvmfs:ci
+          labels: ${{ steps.meta.outputs.labels }}
+      - name: Test cvmfs in image
+        run: >-
+          docker run --rm --privileged
+          ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-cvmfs:ci
+          /bin/bash -lc "ls -l /cvmfs/sw.hsf.org/"
+  push-cvmfs:
+    needs: build-cvmfs
+    if: ${{ github.event_name != 'pull_request' }}
+    strategy:
+      fail-fast: false
+      matrix:
+        image: ["alma9", "ubuntu22", "ubuntu24"]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
@@ -80,7 +117,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v6
         with:
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           platforms: linux/amd64, linux/arm64
           context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs
           file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs/Dockerfile
