Improve the workflow, fail fast, reuse the base image for the cvmfs ones
Currently the cvmfs image pulls from the ghcr, but a push only happens
after a merge to main so there is no base image in ghcr when a new image
is being added. In addition, use a single variable to pass the location
of the image instead of three variables.

--- a/Docker/ubuntu24/ubuntu24-cvmfs/Dockerfile
+++ b/Docker/ubuntu24/ubuntu24-cvmfs/Dockerfile
@@ -1,7 +1,5 @@
-ARG REGISTRY=ghcr.io
-ARG REPOSITORY=key4hep/key4hep-images
-ARG BRANCH=main
-FROM ${REGISTRY}/${REPOSITORY}/ubuntu24:latest
+ARG BASE_IMAGE=ghcr.io/key4hep/key4hep-images/ubuntu24:latest
+FROM ${BASE_IMAGE}
 
 RUN apt update && \
     apt install -y lsb-release && \
