--- a/.github/workflows/image-creator.yml
+++ b/.github/workflows/image-creator.yml
@@ -1,7 +1,7 @@
 # This workflow creates docker images that are then used for:
 #
 # - Key4hep packages CI
-# 
+#
 # All created images are then uploaded to GitHub Container registry
 
 name: Create images
@@ -24,7 +24,7 @@ jobs:
   # Image for running key4hep
   build:
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         image: ["alma9", "ubuntu22", "ubuntu24"]
     runs-on: ubuntu-latest
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Login to DockerHub
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -43,78 +43,39 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}
-      - name: Build and Push
-        id: docker_build
+      - name: Build and push base image (multi-platform)
         uses: docker/build-push-action@v6
         with:
           push: ${{ github.event_name != 'pull_request' }}
           platforms: linux/amd64, linux/arm64
           context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build
           file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build/Dockerfile
-          #tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}:${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
           tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}:latest
           labels: ${{ steps.meta.outputs.labels }}
-  build-cvmfs:
-    needs: build
-    strategy:
-      fail-fast: false
-      matrix:
-        image: ["alma9", "ubuntu22", "ubuntu24"]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Docker Meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}
-      - name: Build and Push
-        id: docker_build
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}:buildcache
+          cache-to: ${{ github.event_name != 'pull_request' && format('type=registry,ref={0}/{1}/key4hep-images/{2}:buildcache,mode=max', env.REGISTRY, github.repository_owner, matrix.image) || '' }}
+      - name: Load amd64 base image locally
         uses: docker/build-push-action@v6
         with:
-          push: false
           load: true
           platforms: linux/amd64
-          context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs
-          file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs/Dockerfile
-          build-args: |
-            REGISTRY=${{ env.REGISTRY }}
-            REPOSITORY=${{ github.repository }}
-            BRANCH=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
-          tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-cvmfs:ci
-          labels: ${{ steps.meta.outputs.labels }}
+          context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build
+          file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-build/Dockerfile
+          tags: base-image:local
+      - name: Build and load cvmfs amd64 for testing
+        run: |
+          docker build \
+            --build-arg BASE_IMAGE=base-image:local \
+            -t ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-cvmfs:ci \
+            -f ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs/Dockerfile \
+            ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs
       - name: Test cvmfs in image
         run: >-
           docker run --rm --privileged
           ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-cvmfs:ci
           /bin/bash -lc "ls -l /cvmfs/sw.hsf.org/ && ls /cvmfs/sw.hsf.org/ | grep -q ."
-  push-cvmfs:
-    needs: build-cvmfs
-    if: ${{ github.event_name != 'pull_request' }}
-    strategy:
-      fail-fast: false
-      matrix:
-        image: ["alma9", "ubuntu22", "ubuntu24"]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Docker Meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}
-      - name: Build and Push
-        id: docker_build
+      - name: Build and push cvmfs image (multi-platform)
+        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/build-push-action@v6
         with:
           push: true
@@ -122,9 +83,8 @@ jobs:
           context: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs
           file: ./Docker/${{ matrix.image }}/${{ matrix.image }}-cvmfs/Dockerfile
           build-args: |
-            REGISTRY=${{ env.REGISTRY }}
-            REPOSITORY=${{ github.repository }}
-            BRANCH=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
-          #tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-cvmfs:${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
+            BASE_IMAGE=${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}:latest
           tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-cvmfs:latest
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-cvmfs:buildcache
+          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ github.repository_owner }}/key4hep-images/${{ matrix.image }}-cvmfs:buildcache,mode=max
