Add a PR trigger

--- a/.github/workflows/test-cvmfs-images.yml
+++ b/.github/workflows/test-cvmfs-images.yml
@@ -5,6 +5,9 @@ on:
     workflows: ["Create images"]
     types:
       - completed
+    branches:
+      - main
+  pull_request:
   workflow_dispatch:
 
 concurrency:
@@ -13,7 +16,7 @@ concurrency:
 
 jobs:
   test-cvmfs:
-    if: ${{ github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}
     strategy:
       fail-fast: false
       matrix:
